--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ syslog = "4.0.1"
 # Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
 rocket = { version = "0.5.0-dev", features = ["tls"], default-features = false }
 rocket_contrib = "0.5.0-dev"
+rocket_lamb = { git = 'https://github.com/dbanty/rocket-lamb', branch = "rocket-0.5" }
 
 # HTTP client
 reqwest = { version = "0.11.2", features = ["blocking", "json", "gzip", "brotli"] }
