--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ syslog = "4.0.1"
 [dependencies]
 # Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
 rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
-rocket_contrib = "0.5.0-dev"
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
 rocket_lamb = { git = "https://github.com/dbanty/rocket-lamb.git", rev = "87c53588f45d4782ca5d180ff0aed14161fe5d21" }
 
 # HTTP client
