--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ syslog = "4.0.1"
 [dependencies]
 # Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
 rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
-rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
-rocket_lamb = { git = "https://github.com/dbanty/rocket-lamb.git", rev = "87c53588f45d4782ca5d180ff0aed14161fe5d21" }
+rocket_lamb = { git = "https://github.com/dbanty/rocket-lamb", branch = "rocket-0.5" }
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" , features = ["json"] }
 
 # HTTP client
 reqwest = { version = "0.11.2", features = ["blocking", "json", "gzip", "brotli"] }
